2014-07-08 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * small fix to setup.sh (update build version to gcc 4.7)

2014-06-25 Alex Koutsman <koutsman@cern.ch>
	* python/cmdLineUtils.py
	* src/Utils.cxx
	* src/Utils.h
	* scripts/YieldsTable.py
	* Adding option to run YieldsTable.py script with bin-by-bin calculation option -P

2014-06-13 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * setup.sh: pointing now to Root 5.34.18 patch version located in usual afs area

2014-06-05 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
        * setup.sh: pointing now to gcc 4.7 and Root 5.34.18 patch due to requirements by the CombinationTool package
	* analysis/batchjobs/HypoTest.py: add a rescan for -l in case that the initial scan range was not sufficient. Store the result as debug_<point>.root in case of failures in -l

2014-06-02 Geert-Jan Besjes <geert-jan.besjes@cern.ch>
	* src/StatTools.cxx: switch on PROOF-lite when nCPUs>1
	* src/Utils.cxx: indenting fix
	
	* src/LimitResult.cxx: write out with %e and not %f
	* src/StatTools.cxx: remove the hack needed with %f 

2014-05-14 Alex Koutsman <koutsman@cern.ch>
        * src/Utils.cxx
	* fixing bug in ratio plot error 

2014-04-23 Alex Koutsman <koutsman@cern.ch>
	* scripts/SysTable.py
	* Added method-2 back to SysTable.py

2014-03-26 David Cote <david.cote@cern.ch>
	* Added ERROR message when high==low in sample.addOveralSys().
	  Otherwise, HistFactory seems to do something like error=(high-low)/(high+low),
	  which silently cancels the error.

2014-03-21 David Cote <david.cote@cern.ch>
	* Made plotRatio of type string (instead of bool) and configurable via configMgr, with options: "ratio", "pull, "none"
	* Implemented plotRatio=="none" case in Utils.cxx

2014-03-07 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
       * analysis/batchjobs/HypoTest.py: update for -l to reflect changes in src/ConfigMgr.cxx for upper limits (-l)
