@@ -1,3 +1,6 @@
+2014-07-14 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
+        * setup.sh: update to Root 5.34.19 and load more recent xrootd libraries
+
 2014-07-08 Jeanette Miriam Lorenz <jeanette.miriam.lorenz@cern.ch>
         * small fix to setup.sh (update build version to gcc 4.7)
 
